--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,26 @@
-body { padding-top: 70px; }
+body { 
+  padding-top: 90px;
+}
+
+nav {
+  font-size: 1.4em;
+  box-shadow: 0 2px 5px rgba(0,0,0,.26);
+  z-index: 1;
+}
+
+#contact-us {
+  color: #eeeeee;
+  background-color: #455a64;
+  padding-top: 20px;
+}
+
+#contact-us-message {
+  height: 150px;
+}
+
+#legal {
+  background-color: #1c313a;
+  color: #eeeeee;
+  padding-top: 15px;
+  font-size: 1.5em;
+}
