--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body { 
-  background-color: #455a64;
+  background-color: #718792;
   position: relative;
 }
 
@@ -42,9 +42,13 @@ nav {
   text-decoration: underline;
 }
 
-#team {
-  color: #eeeeee;
+#services {
+  background-color: #455a64;
 }
+
+/*#team {
+  background-color: #718792;
+}*/
 
 .card-columns {
   @include media-breakpoint-only(lg) {
@@ -58,6 +62,8 @@ nav {
 #team-card {
   max-width: 18rem;
   background-color: #1c313a;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  z-index: 0.5;
 }
 
 .card-img-top {
@@ -71,7 +77,7 @@ nav {
 
 #contact-us {
   color: #eeeeee;
-  /*background-color: #1c313a;*/
+  background-color: #455a64;
   padding-top: 20px;
   box-shadow: 0 -2px -5px rgba(0,0,0,.26);
 }
@@ -85,5 +91,4 @@ nav {
   color: #eeeeee;
   padding-top: 15px;
   font-size: 1.5em;
-  /*border-top: black solid;*/
 }
